整理代码